--- a/setup.yml
+++ b/setup.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: router
+- hosts: openwrt
+  gather_facts: no
   vars_files:
     - vars.yml
   remote_user: root
@@ -12,12 +13,15 @@
 
     - name: Start Sysupgrade
       nohup:
-        command: sysupgrade -q /tmp/sysupgrade.bin
+        command: sysupgrade -q -n /tmp/sysupgrade.bin
 
-    - name: Waiting for Reboot
-      wait_for_connection:
-        timeout: 300
-        delay: 60
+    - name: Wait for server to restart
+      local_action:
+        module: wait_for
+          host=10.20.30.254
+          port=22
+          delay=10
+          timeout=700
 
     - name: Copy Authorized Keys
       copy:
@@ -26,7 +30,7 @@
 
     - name: Set ROOT Password
       shell: |
-        sed -i 's,root:[^:]*,root:$1$7cd/A4q0$XQkoDTD54PvTTeAXjOiaf1,' "/etc/shadow"
+        sed -i 's,root:[^:]*,root:{{ root_password }},' "/etc/shadow"
 
     - name: Revert Pending Changes
       uci:
@@ -90,4 +94,14 @@
     - name: Apply Changes
       uci:
         command: commit
-      notify: reload wifi
+
+    - name: Rebooting
+      command: reboot
+
+    - name: Wait for server to restart
+      local_action:
+        module: wait_for
+          host=10.20.30.254
+          port=22
+          delay=10
+          timeout=700
